--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="saveButton">Save</string>
     <string name="empty">Fields are empty.</string>
     <string name="descriptionTextPlus">Plus Button Icon</string>
+    <string name="placeholderText">Placeholder</string>
 </resources>
